fixed issues on mobile home

--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -6,23 +6,28 @@
   display: flex;
   font-family: $body-font;
   color: white;
-  font-weight: 700;
+  font-weight: 100;
   justify-content: space-between;
   letter-spacing: 1px;
   align-items: center;
   @include respond(portrait) { // width < 1200
       display: block;
       height: auto;
+      padding: 3rem;
     }
   &__left{
     display: flex;
     width: 20rem;
     justify-content: space-between;
+    @include respond(portrait) { // width < 1200
+      margin: 2rem auto;
+    }
   }
   &__right{
     text-align: right;
     @include respond(portrait) { // width < 1200
       text-align: center;
+      font-size: 1.4rem;
     }
   }
 }
