--- a/source/stylesheets/components/_header2.scss
+++ b/source/stylesheets/components/_header2.scss
@@ -6,12 +6,20 @@
   justify-content: space-between;
   padding: 8rem;
   position: relative;
+  @include respond(phone) {
+   display: block;
+   padding: 3rem;
+   height: auto;
+  }
 
 
   h2{
   font-size: 4.8rem;
   font-weight: 700;
   color: black;
+  @include respond(phone) {
+   font-size: 3.8rem;
+  }
   }
 
   p{
