--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -7,7 +7,7 @@
   color: black;
   align-items: center;
   justify-content: space-between;
-  width: 100%;
+  width: 100vw;
   z-index: 800;
   font-size: 1.4rem;
 
@@ -56,11 +56,13 @@
     position: absolute;
     top: 6rem;
     right: 5rem;
+    width: 20rem;
     color: black;
     font-weight: 300;
+    text-align: center;
     font-size: 1.4rem;
     @include respond(phone) {
-      font-size: 1.6rem;
+      width: 17rem;
       right: 1rem;
     }
   }
